# test

./: CMakeLists.txt  build-run.sh  build.sh
include/: expectations.h  test-status.h  test.h  unit-test.h
src/: expectations.c  test-status.c  test.c  unit-test.c
tests/: CMakeLists.txt
tests/src/: main.c
